Bug 865487 - New Tab button should never get -moz-box-align: stretch in the first place, r=dao
UltraBlame original commit: f6d79b7751c3fa3a8c9950aff02118a58ead8c1e

--- a/browser/themes/shared/tabs.inc.css
+++ b/browser/themes/shared/tabs.inc.css
@@ -21,12 +21,15 @@
 .tabbrowser-tab,
 .tabs-newtab-button {
   -moz-appearance: none;
-  -moz-box-align: stretch;
   background-color: transparent;
   border-radius: 0;
   border-width: 0;
   margin: 0;
   padding: 0;
+}
+
+.tabbrowser-tab {
+  -moz-box-align: stretch;
 }
 
 
